# robo_tivseg_standalone_test

./: CMakeLists.txt  CMakeSettings.json
include/: MarkerInfo.hpp
src/: AbstractModule.cpp  AbstractModule.h  Enums.h  ImageProcessingModule.cpp  ImageProcessingModule.h  ObstacleModule.cpp  ObstacleModule.h  Positions.h  ProtocolModule.cpp  ProtocolModule.h  trythis.cpp
test/: CMakeLists.txt  SensorManagerStub.cpp  SensorManagerStub.h  SensorManagerStubObstacleAlways.cpp  SensorManagerStubObstacleAlways.h  SensorManagerStubObstacleNever.h  SensorManager_Stub.cpp  SensorManager_Stub.h  test.cpp
test/SensorManager/: SensorManagerStub.h  SensorManagerStubObstacleAlways.h  SensorManagerStubObstacleNever.cpp  SensorManagerStubObstacleNever.h
